syntax = "proto3";

option go_package = ".";

package account;

service UserService {
    rpc SignUp(UserSignUpRequest) returns (UserSignUpResponse);
    rpc SignIn(UserSignInRequest) returns (UserSignInResponse);
}

message UserSignUpRequest {
    string username = 1;
    string password = 2;
    string confirm_password = 3;
}

message UserSignUpResponse {
    int32 code = 1;
}

message UserSignInRequest {
    string username = 1;
    string password = 2;
}

message UserSignInResponse {
    int32  code = 1;
    string token = 2;
    int64  uid = 3;
    string username = 4;
    string sign_up_at = 5;
}